fixed padding on mobile nav

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,10 +351,11 @@ footer {
         text-align: center;
     }
     .navbar-nav>li>a {
-        padding-top: 25px;
-        padding-bottom: 25px;
-        font-size: 45px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-size: 3rem;
         margin-top: 20px;
+        display: inline-block;
     }
     .navbar-text {
         float: none;
